# minigrep

./: .gitignore  Cargo.toml  poem.txt  words.txt
fixtrues/directory_access/: directory_access_utf16be.txt  directory_access_utf8_bom.txt
fixtrues/mysql/: mysql_configuration.1.yml  mysql_configuration.2.yml
fixtures/borg/: borg_configuration.yml
fixtures/directory_access/: directory_access_gb18030.txt  directory_access_utf16le.txt  directory_access_utf8.txt
fixtures/mysql/: mysql_configuration.yml
migrations/2019-01-29-021322_create_fs_change_logs/: down.sql  up.sql
src/: app_state.rs  borg.rs  common_message.rs  common_util.rs  db.rs  directory_access.rs  error.rs  fixture_util.rs  fxiture_util.rs  lib.rs  main.rs  models.rs  mysql.rs  schema.rs  test_string.rs  test_vec.rs
src/borg/: borg_invoker.rs  borg_server_configuration.rs
src/models/: fs_change_log_model.rs  mod.rs
src/mysql/: mycnf.rs  mysql_server_configuration.rs
src/tests/: mod.rs  test_fun.rs  test_iter.rs  test_string.rs  test_vec.rs
src/watcher/: mod.rs  watcher.rs  watcher_dispatch.rs
