[package]
name = "minigrep"
version = "0.1.0"
authors = ["libo <jianglibo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
chrono = "0.4"
diesel = { version = "1.4.1", features = ["sqlite", "chrono", "r2d2"] }
dotenv = "0.13.0"
regex = "1"
lazy_static = "1.2.0"
yaml-rust = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
notify = "4.0.7"
tempfile = "3"